Fix user panel overflow issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -717,7 +717,6 @@ th {
   margin: 20px 0;
   padding: 10px;
   width: 100%;
-  overflow-x: auto;
 }
 
 #user-account #account-panel > h4 {
