--- a/resources/assets/sass/account/_account.scss
+++ b/resources/assets/sass/account/_account.scss
@@ -76,7 +76,6 @@
         margin: 20px 0;
         padding: 10px;
         width: 100%;
-        overflow-x: auto;
         > h4 {
             margin: 0 10px 20px;
             font-size: 14px;
